@@ -2,7 +2,7 @@ using Terraria;
 using Terraria.ModLoader;
 using Microsoft.Xna.Framework;
 
-using Spooky.Content.NPCs.EggEvent;
+using Spooky.Core;
 
 namespace Spooky.Content.Biomes
 {
