@@ -2,15 +2,21 @@ using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
 using Terraria.Audio;
+using ReLogic.Content;
 using Microsoft.Xna.Framework;
+using Microsoft.Xna.Framework.Graphics;
 using System;
 
+using Spooky.Core;
 using Spooky.Content.Buffs;
 
 namespace Spooky.Content.Projectiles.Minibiomes.Christmas
 {
     public class ShapeBoxProj : ModProjectile
     {
+        private static Asset<Texture2D> ProjTexture;
+        private static Asset<Texture2D> AuraTexture;
+
         public override void SetStaticDefaults()
         {
             Main.projFrames[Projectile.type] = 5;
@@ -18,10 +24,10 @@ namespace Spooky.Content.Projectiles.Minibiomes.Christmas
 
         public override void SetDefaults()
         {
-            Projectile.width = 14;
-            Projectile.height = 24;
+            Projectile.width = 12;
+            Projectile.height = 12;
             Projectile.friendly = true;
-            Projectile.tileCollide = true;
+            Projectile.tileCollide = false;
             Projectile.timeLeft = 360;
             Projectile.penetrate = 1;
         }
@@ -36,13 +42,19 @@ namespace Spooky.Content.Projectiles.Minibiomes.Christmas
             return false;
         }
 
-        public override bool OnTileCollide(Vector2 oldVelocity)
+        public override bool PreDraw(ref Color lightColor)
 		{
-            if (Projectile.ai[1] == 0)
-            {
-                Projectile.velocity = Vector2.Zero;
-                Projectile.ai[1] = 1;
-            }
+			ProjTexture ??= ModContent.Request<Texture2D>(Texture);
+            AuraTexture ??= ModContent.Request<Texture2D>(Texture + "Glow");
+
+            Vector2 drawOrigin = new(ProjTexture.Width() * 0.5f, Projectile.height * 0.5f);
+            Vector2 vector = new Vector2(Projectile.Center.X, Projectile.Center.Y) - Main.screenPosition + new Vector2(0, Projectile.gfxOffY);
+            Rectangle rectangle = new(0, ProjTexture.Height() / Main.projFrames[Projectile.type] * Projectile.frame, ProjTexture.Width(), ProjTexture.Height() / Main.projFrames[Projectile.type]);
+
+            float fade = (float)Math.Cos((double)(Main.GlobalTimeWrappedHourly % 2.5f / 2.5f * 25f)) / 2f + 0.5f;
+
+            Main.EntitySpriteDraw(AuraTexture.Value, vector, rectangle, Projectile.GetAlpha(Color.White), Projectile.rotation, drawOrigin, Projectile.scale + (fade / 2), SpriteEffects.None, 0);
+			Main.EntitySpriteDraw(ProjTexture.Value, vector, rectangle, Projectile.GetAlpha(lightColor), Projectile.rotation, drawOrigin, Projectile.scale, SpriteEffects.None, 0);
 
 			return false;
 		}
@@ -51,17 +63,16 @@ namespace Spooky.Content.Projectiles.Minibiomes.Christmas
         {
             Player player = Main.player[Projectile.owner];
 
-            Projectile.frame = (int)Projectile.ai[2];
+            Projectile.frame = (int)Projectile.ai[1];
 
             Projectile.rotation += (Math.Abs(Projectile.velocity.X) + Math.Abs(Projectile.velocity.Y)) * 0.01f * (float)Projectile.direction;
 
             Projectile.ai[0]++;
             if (Projectile.ai[0] > 30)
             {
-                Projectile.velocity.X = Projectile.velocity.X * 0.99f;
-                Projectile.velocity.Y = Projectile.velocity.Y + 0.75f;
+                Projectile.velocity.Y = 3;
 
-                if (Projectile.Distance(player.Center) <= 150f)
+                if (Projectile.Distance(player.Center) <= 100f)
                 {
                     Vector2 desiredVelocity = Projectile.DirectionTo(player.MountedCenter) * 20;
                     Projectile.velocity = Vector2.Lerp(Projectile.velocity, desiredVelocity, 1f / 20);
@@ -69,9 +80,11 @@ namespace Spooky.Content.Projectiles.Minibiomes.Christmas
 				
 				if (Projectile.Hitbox.Intersects(player.Hitbox))
                 {
-                    SoundEngine.PlaySound(SoundID.Item2, Projectile.Center);
+                    //SoundEngine.PlaySound(SoundID.Item2, Projectile.Center);
 
-					player.AddBuff(ModContent.BuffType<KrampusShapeBuff>(), 300);
+					player.AddBuff(ModContent.BuffType<KrampusShapeBuff>(), 1200);
+
+                    player.GetModPlayer<SpookyPlayer>().KrampusShapeBuffStacks++;
 
                     Projectile.Kill();
                 }
