@@ -585,9 +585,10 @@ StockingMinion.DisplayName: Krampus' Helper Minion
 ThrowingCard.DisplayName: Throwing Card
 HallucigeniaSpineProj1.DisplayName: Hallucigenia Spine
 HallucigeniaSpineProj2.DisplayName: Hallucigenia Spine
-ShapeBoxProj.DisplayName: Shape Box Proj
+ShapeBoxProj.DisplayName: Wooden Shape
 PipeBomb.DisplayName: Pipe Bomb
 DirtyNeedle.DisplayName: Dirty Needle
 Dumbbell.DisplayName: Dumbbell
 CemeteryPoppyProj.DisplayName: Ornamental Poppy
 CemeteryPoppyPetal.DisplayName: Poppy Petal
+FleshBolsterPillar.DisplayName: Eye Tendril
